fixes + improvements